--- a/windsofhell.csproj
+++ b/windsofhell.csproj
@@ -1,114 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D49D001F-6650-4BE1-A540-51A439EF4526}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>windsofhell</RootNamespace>
-    <AssemblyName>windsofhell</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\windsofhell\</OutputPath>
-    <IntermediateOutputPath>..\..\obj\Debug\windsofhell\</IntermediateOutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\bin\Release\windsofhell\</OutputPath>
-    <IntermediateOutputPath>..\..\obj\Release\windsofhell\</IntermediateOutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="VintagestoryAPI">
-      <HintPath>D:\Vintagestory\VintagestoryAPI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VSSurvivalMod">
-      <HintPath>D:\Vintagestory\Mods\VSSurvivalMod.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VSEssentials">
-      <HintPath>D:\Vintagestory\Mods\VSEssentials.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VSCreativeMod">
-      <HintPath>D:\Vintagestory\Mods\VSCreativeMod.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>D:\Vintagestory\Lib\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\bite_attack1.ogg" />
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\bite_attack2.ogg" />
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\death1.ogg" />
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\death2.ogg" />
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\flap1.ogg" />
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\flap2.ogg" />
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\flap3.ogg" />
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\flap4.ogg" />
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\roar1.ogg" />
-    <Content Include="resources\assets\windsofhell\sounds\entity\knightsdragon\roar2.ogg" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\knightsdragon\female1.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\knightsdragon\female2.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\knightsdragon\female3.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf1.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf2.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf3.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf4.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf5.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf6.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf7.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf8.png" />
-    <Content Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf9.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="src\entities\abase\EntityFlyingTameable.cs" />
-    <Compile Include="src\entities\abase\MathX.cs" />
-    <Compile Include="src\entities\abase\RedirectLogs.cs" />
-    <Compile Include="src\entities\ai\EntityAIFlyingRide.cs" />
-    <Compile Include="src\WindsOfHell.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="resources\assets\windsofhell\entities\land\knightsdragon-female.json" />
-    <None Include="resources\assets\windsofhell\entities\land\wingedwolf_male.json" />
-    <None Include="resources\assets\windsofhell\itemtypes\creature_knightsdragon_female.json" />
-    <None Include="resources\assets\windsofhell\itemtypes\wingedwolf_male.json" />
-    <None Include="resources\assets\windsofhell\lang\en.json" />
-    <None Include="resources\assets\windsofhell\shapes\entity\land\knightsdragon-female.json" />
-    <None Include="resources\assets\windsofhell\shapes\entity\land\wingedwolf.json" />
-    <None Include="resources\assets\windsofhell\textures\entity\land\knightsdragon\female1.png.kra" />
-    <None Include="resources\assets\windsofhell\textures\entity\land\knightsdragon\female1.png~" />
-    <None Include="resources\assets\windsofhell\textures\entity\land\wingedwolf\wolf9.png.kra" />
-    <None Include="resources\modinfo.json" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
+<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>net461</TargetFramework>
+	</PropertyGroup>
+	
+	<ItemGroup>
+		<Reference Include="VintagestoryAPI">
+			<HintPath>$(VINTAGE_STORY)/VintagestoryAPI.dll</HintPath>
+			<Private>false</Private>
+		</Reference>
+		<Reference Include="VintagestoryAPI">
+			<HintPath>$(VINTAGE_STORY)/Mods/VSEssentials.dll</HintPath>
+			<Private>false</Private>
+		</Reference> 
+	    <Reference Include="VintagestoryAPI">
+			<HintPath>$(VINTAGE_STORY)/Mods/VSSurvivalMod.dll</HintPath>
+			<Private>false</Private>
+		</Reference> 
+	</ItemGroup>
+	
+	<ItemGroup Condition="'$(Configuration)' == 'Release'">
+		<None Include="UNLICENSE" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="resources/**">
+			<Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+	
+	<Target Name="Package" AfterTargets="PostBuildEvent" Condition="'$(Configuration)' == 'Release'">
+		<ZipDirectory DestinationFile="bin/$(TargetName).zip" SourceDirectory="$(TargetDir)" Overwrite="true" />
+	</Target>
 </Project>
